# rent-tracker

./: .env.example  .gitignore  README.md  alembic.ini  creds.ejson  pyproject.toml  test_connection.py  test_email.py
4+1_views/: logic_view.md  process_view.md
migrations/: env.py
migrations/versions/: 001_initial_rentrack_tables.py
scripts/: setup.ps1
src/app/: __init__.py  config.py  database.py  main.py
src/app/domain/: __init__.py
src/app/domain/charge_states/: __init__.py  behaviors.py  transitions.py
src/app/factories/: __init__.py  payment_factory.py  property_factory.py
src/app/forms/: __init__.py  allocation_forms.py  payment_forms.py  property_forms.py  rent_charge_forms.py  report_forms.py  tenant_forms.py
src/app/models/: __init__.py  payment.py  payment_allocation.py  property.py  rent_charge.py  tenant.py
src/app/repositories/: __init__.py  base_repository.py  payment_repository.py  property_repository.py  rent_charge_repository.py  tenant_repository.py
src/app/routes/: __init__.py  allocations.py  dashboard.py  email.py  payments.py  properties.py  rent_charges.py  reports.py  tenants.py
src/app/services/: __init__.py  email_service.py  payment_service.py  report_service.py
src/app/static/css/: style.css
src/app/static/js/: main.js
src/app/templates/: base.html  dashboard.html
src/app/templates/allocations/: form.html
src/app/templates/payments/: create.html  detail.html  list.html
src/app/templates/properties/: create.html  detail.html  edit.html  list.html
src/app/templates/rent_charges/: create.html  detail.html  list.html
src/app/templates/reports/: arrears.html  dashboard.html  financial.html  property_history.html  select_property.html
src/app/templates/tenants/: create.html  detail.html  edit.html  list.html
